# resonantia

./: .env.example  Caddyfile  DOCKER_DEPLOY.md  Resonantia.slnx  alkahest.html  dmc_onboarding_adventure.html  docker-compose.yml  index.html  meet_the_mind_orb_avec.html  onboarding_experience.md  tech.html  tom-bio.md
Resonantia.Ui/: Resonantia.Ui.csproj  Resonantia.Ui.csproj.lscache
Resonantia.Ui/Components/: Routes.razor  _Imports.razor
Resonantia.Ui/Components/Layout/: MainLayout.razor  NavMenu.razor  (+3 more)
Resonantia.Ui/Helpers/: Unwinder.cs
Resonantia.Ui/Models/: GatewayDtos.cs
Resonantia.Ui/Services/: GatewayApiClient.cs  GatewayOptions.cs  OllamaOptions.cs  OllamaService.cs
Resonantia.Ui/wwwroot/: app.css  graph.js  swipe.js  theme.js
Resonantia.Web/: Program.cs  Resonantia.Web.csproj  Resonantia.Web.csproj.lscache  _Imports.razor
Resonantia.Web/Layout/: NavMenu.razor
Resonantia.Web/Properties/: launchSettings.json
Resonantia.Web/wwwroot/: index.html  manifest.webmanifest
docs/: CNAME  index.html
docs/about/: index.html
docs/tech/: index.html
resonantia/: .dockerignore  Dockerfile  LAN_DEPLOY.md  README.md  flow.html  package-lock.json  package.json  tsconfig.json  vite.config.js  weaver-context-summary.md
resonantia/gateway/: BYO_GATEWAY_SPEC.md  Cargo.toml  README.md
resonantia/src/: app.d.ts  app.html
resonantia/src-tauri/: Cargo.toml  tauri.conf.json
resonantia/src-tauri/resonantia-core/: Cargo.toml
resonantia/src-tauri/resonantia-core/src/: lib.rs
resonantia/static/: graph.js  manifest.webmanifest  sw.js  swipe.js  theme.js
(+49 files in other folders)
