[package]
name = "resonantia-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
sttp-core-rs = "0.1.5"
surrealdb = { version = "3", default-features = false, features = ["protocol-http", "protocol-ws", "kv-surrealkv", "rustls", "kv-mem"] }
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
